# pyrecover

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
src/pyrecover/: __init__.py  main.py
tests/: test_crypto.py  test_encrypt_decrypt.py
