[project]
name = "pyrecover"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jovaras.z", email = "jovaras.z@8devices.com" }
]
requires-python = ">=3.13"
dependencies = [
    "cryptography>=45.0.5",
    "pyperclip>=1.9.0",
    "typer>=0.16.0",
]

[project.scripts]
pyrecover = "pyrecover.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.12.4",
]
